--- a/src/app/modal-recap/modal-recap.component.scss
+++ b/src/app/modal-recap/modal-recap.component.scss
@@ -10,3 +10,8 @@
 .mat-line {
   font-family: Mukta-Regular, sans-serif !important;
 }
+.neon-wizard-btn-container2 {
+  display: flex;
+  justify-content: flex-start;
+  flex: 2;
+}
