--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -672,6 +672,36 @@
 </div>
 
 
+
+
+
+<div *ngIf="resetPass" class="login-step-container">
+  <h2 class="login-title">Réinitialisez votre mot de passe</h2>
+
+  <div class='user-info-row-cont login-row'>
+    <span class="user-info-row-title">Ancien mot de passe</span>
+    <form>
+      <input type='password' (change)="onCheckPassword('oldPassword', $event.target.value)" [value]=""
+        class="basic-input " />
+    </form>
+    <!-- <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a> -->
+    <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
+  </div>
+
+  <div class='user-info-row-cont login-row'>
+    <span class="user-info-row-title">Nouveau mot de passe</span>
+    <form>
+      <input type='password' (change)="onCheckPassword('newPassword', $event.target.value)" [value]=""
+        class="basic-input " />
+    </form>
+    <!-- <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a> -->
+    <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
+  </div>
+  <button class="next-btn-no-margin signup-btn " (click)="onSignUp()" type="button">C'est parti</button>
+  <button class="prev-btn signup-btn" (click)="onSwitchLoginType()" type="button">J'ai déjà un compte</button>
+</div>
+
+
 <div *ngIf="loading" class="blendContainer">
   <svg id="progress-circle" class="animation-circle" viewBox="0 0 50 50">
     <!--<circle cx="25" cy="25" r="20" fill="none" stroke="#e2ecf8" stroke-width="7" />-->
