--- a/src/app/modal-recap/modal-recap.component.html
+++ b/src/app/modal-recap/modal-recap.component.html
@@ -44,7 +44,7 @@
 margin-top: 50px;" mat-dialog-actions>
 
   <button  class="newPrev-btn " type="button" (click)="onNoClick()"><mat-icon mat-list-icon>keyboard_arrow_left</mat-icon>          </button>
-  <button [mat-dialog-close]="true" class=" next-btn col-md-3 col-sm-10" type="button" (click)="onCompleteStep(3, 'typo', null)" style="width: 500px;"
+  <button [mat-dialog-close]="true" class=" next-btn col-md-3 col-sm-10" type="button"  style="width: 500px;"
      >Valider</button>
 </div>
 <!--
