--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -821,7 +821,7 @@ margin-bottom: 15px;
 .big-btn {
   padding-left: 35px;
         padding-right: 35px;
-        height: 85px;
+        // height: 85px;
 }
 .recapList2 {
   display: block;
